--- a/Readme
+++ b/Readme
@@ -1,1 +1,3 @@
-Im on a linux PC so I dont have Visual Studio, but I do have VSCdoe, so I made this a devcontainer, then used the GNU assembly. To run yourself if you arent on a Linux device, using VSCode devcontainers should let it all work.
+Im on a linux PC so I dont have Visual Studio, but I do have VSCdoe, so I made this a devcontainer, then used the GNU assembly. To run yourself if you arent on a Linux device, using VSCode devcontainers should let it all work. 
+
+To run, the VSCode debugger can be used, as it will build the executable, then prompt for inputs to demo the first and second parts. Otherwise, you can use `make` to build the output, and then call the program with 3 parameters (fist = first num to add and multiply for the demo, second = second number to add and multiply for the demo, third = factor to multiple the part 3 array elements by). Once the add and multiply demo is done, then the part 3 demo will run, where it will take an array and multiply it by the factor param.
